I finished adding the custom fonts from Google

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
           <meta name="keywords" content="voltron, robots, Fresno, damon, Damon Thomas" />
           <meta name="description" content="Welcome to Voltron Toys, LLC. The Greatest Voltron robots on earth!" />
           
+          <!--<link href='https://fonts.googleapis.com/css?family=Pacifico|Amatic+SC:700|Abril+Fatface' rel='stylesheet' type='text/css'>-->
           <link rel="stylesheet" href="css/styles.css" type="text/css" />
           <link rel="stylesheet" href="css/font-awesome.css" type="text/css" />
      </head>
